<resources>
    <string name="app_name">StocksApp</string>
    <string name="Home_Title">Stock Tracker</string>
    <string name="Add_Title">add a new stock</string>
    <string name="Home">Home</string>
    <string name="Add">Add</string>
    <string name="Total">Total</string>
    <string name="HotStocks">Hot Stocks</string>
    <string name="stock_image">stock image</string>
    <string name="update_stats_btn">update stats button</string>
    <string name="Edit_Stock">Edit Stock</string>
    <string name="Bought_Price">Bought Price</string>
    <string name="Bought_Amount">Bought Amount</string>
    <string name="Stock_Name">Stock Name</string>
    <string name="Stock_Symbol">Stock Symbol</string>
    <string name="Stock_Description">Stock Description</string>
    <string name="loading">loading</string>
    <string name="Today_change">Today change</string>
    <string name="Current_Price">Current Price</string>
    <string name="Amount">Amount</string>
    <string name="Total_worth">Total worth</string>
    <string name="Profit">Profit</string>
    <string name="Total_change">Total change</string>
    <string name="save">save</string>
    <string name="Total_Profit_Loss">Total Profit Or Loss</string>
    <string name="Profit_Loss">Total Profit Or Loss (%)</string>
    <string name="Total_Portfolio_Summary">Total Portfolio Summary</string>
    <string name="Error_Toast_API">Error Getting stock price from api</string>
    <string name="Fill_All_Fields">All fields must be filled</string>
    <string name="Wrong_Symbol_Input">Wrong Symbol Input</string>
    <string name="Permission_Declined">can\'t convert currency without location permission</string>

    <string name="deletion_confirmation_title">Confirm Deletion</string>
    <string name="deletion_confirmation">Are You sure You Want to Delete this Stock?</string>
    <string name="deletion_confirmation_yes">Yes</string>
    <string name="deletion_confirmation_no">No</string>
    <string name="now">now</string>
    <string name="min_ago">min ago</string>
    <string name="more_than_min_ago">>30 min</string>

    <string name="NVIDIA_name">NVIDIA</string>
    <string name="NVIDIA_description">Nvidia (NVDA) is a technology company providing computer processing capability in a variety of arenas, including computer gaming, mobile computing, supercomputing, automotive computing and artificial intelligence.</string>
    <string name="NVIDIA_symbol">NVDA</string>

    <string name="Meta_name">Meta</string>
    <string name="Meta_description">Meta Platforms, Inc. engages in the development of social media applications. It builds technology that helps people connect and share, find communities, and grow businesses.</string>
    <string name="Meta_symbol">META</string>

    <string name="Netflix_name">Netflix</string>
    <string name="Netflix_description">Netflix, Inc. engages in providing entertainment services. It also offers activities for leisure time, entertainment video, video gaming, and other sources of entertainment.</string>
    <string name="Netflix_symbol">NFLX</string>

    <string name="Rivian_Automotive_name">Rivian Automotive</string>
    <string name="Rivian_Automotive_description">Rivian Automotive, Inc. engages in the design, development, and manufacture of category-defining electric vehicles and accessories.</string>
    <string name="Rivian_Automotive_symbol">RIVN</string>

    <string name="Microsoft_name">Microsoft</string>
    <string name="Microsoft_description">The Microsoft Corporation (MSFT), commonly shortened to Microsoft, is a multinational American technology company. Headquartered in Redmond, WA, Microsoft researches, develops, manufactures, supports, licenses, and sells personal computers, computer software, consumer electronics, and related services.</string>
    <string name="Microsoft_symbol">MSFT</string>

    <string name="Alphabet_name">Alphabet</string>
    <string name="Alphabet_description">Alphabet, Inc. is a holding company, which engages in software, health care, transportation, and other technologies. It operates through the following segments: Google Services, Google Cloud, and Other Bets.</string>
    <string name="Alphabet_symbol">GOOGL</string>

    <string name="Amazon_name">Amazon</string>
    <string name="Amazon_description">Amazon.com, Inc (AMZN) is a multinational technology company that is known for its online shopping (e-commerce) capabilities, digital streaming services, and artificial intelligence.</string>
    <string name="Amazon_symbol">AMZN</string>

    <string name="Apple_name">Apple</string>
    <string name="Apple_description">Apple (AAPL) is a multinational technology company that develops, designs, markets, and distributes multiple forms of consumer electronics and online services.</string>
    <string name="Apple_symbol">AAPL</string>

    <string name="Tesla_name">Tesla</string>
    <string name="Tesla_description">Tesla (TSLA), formerly known as Tesla Motors, Inc., is an auto manufacturer that specializes in electric vehicle production and clean energy. This auto manufacturer conducts research on battery energy storage, coordinating power from grids to homes and vehicles.</string>
    <string name="Tesla_symbol">TSLA</string>

    <string name="Disney_name">Disney</string>
    <string name="Disney_description">The Walt Disney Company (DIS), commonly shortened to Disney, is a multinational entertainment and mass media corporation. It is known for its TV channels, animated and live action films, and entertainment parks.</string>
    <string name="Disney_symbol">DIS</string>
</resources>