<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="0dp">



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".infoFragment"
    app:layout_constraintBottom_toTopOf="@+id/bottom_navigation">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Home_Title"
            android:textColor="@color/stock_symbol"
            android:textSize="24sp"
            android:padding="16dp"
            android:gravity="center"
            android:background="@drawable/gradient_text"
            />
        <ImageView
            android:id="@+id/NVIDIA_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/nvidia_image" />
        <TextView
            android:id="@+id/NVIDIA_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/NVIDIA_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/NVIDIA_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/NVIDIA_description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/Meta_image"
            android:layout_width="200dp"
            android:layout_height="112dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/meta_image"
            />

        <TextView
            android:id="@+id/Meta_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Meta_name"
            android:textColor="@color/white"
            android:textSize="25dp" />
        <!-- TextView for displaying stake description -->
        <TextView

            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Meta_description"
            android:textColor="@color/white"
            android:textSize="18dp" />


        <ImageView
            android:id="@+id/Netflix_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/netflix_image" />

        <TextView
            android:id="@+id/Netflix_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Netflix_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/Netflix_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Netflix_description"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/Rivian_Automotive"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/rivian_image" />
        <TextView
            android:id="@+id/Rivian_Automotive_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Rivian_Automotive_name"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/Rivian_Automotive_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Rivian_Automotive_description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cocktail_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/microsoft_image"
            />

        <TextView
            android:id="@+id/Microsoft_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Microsoft_name"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/Microsoft_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Microsoft_description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/Alphabet_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/alphabet_image"
            />


        <TextView
            android:id="@+id/Alphabet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Alphabet_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/Alphabet_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Alphabet_description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/Amazon_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/amazon_image"
            />

        <TextView
            android:id="@+id/Amazon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Amazon_name"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/Amazon_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Amazon_description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/Apple_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/apple_image"
            />

        <TextView
            android:id="@+id/Apple_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Apple_name"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/Apple_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Apple_description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tesla_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/tesla_image"
            />

        <TextView
            android:id="@+id/Tesla_name"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Tesla_name"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/Tesla_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Tesla_description"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/Disney_image"
            android:layout_width="200dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/disney_image"
            />

        <TextView
            android:id="@+id/Disney_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Disney_name"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/Disney_description"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Disney_description"
            android:textColor="@color/white"
            android:textSize="18sp" />











    </LinearLayout>



</ScrollView>
<com.google.android.material.bottomnavigation.BottomNavigationView
android:id="@+id/bottom_navigation"
android:layout_width="match_parent"
android:layout_height="wrap_content"
app:labelVisibilityMode="labeled"
app:layout_constraintBottom_toBottomOf="parent"
app:menu="@menu/main_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

