<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:padding="16dp"
    android:layout_margin="5dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="8dp">

    <!-- ConstraintLayout to hold the main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <!-- Stock Image -->
        <ImageView
            android:id="@+id/stockImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/default_image"
            android:contentDescription="@string/stock_image"
            android:background="@drawable/circular_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- LinearLayout for stock symbol and name -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/stockImage"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/stockImage"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Stock Symbol -->
            <TextView
                android:id="@+id/stockSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/stock_symbol"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/loading"/>

            <!-- Stock Name -->
            <TextView
                android:id="@+id/stockName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/stock_name"
                android:textSize="14sp"
                android:text="@string/Stock_Name"/>
        </LinearLayout>

        <!-- LinearLayout for stock value and change percentage -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/lastUpdated"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Stock Value -->
            <TextView
                android:id="@+id/stockValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/stock_value"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/loading"/>

            <!-- Stock Change -->
            <TextView
                android:id="@+id/stockChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/up"
                android:textSize="14sp"
                android:text="@string/loading"/>

        </LinearLayout>

        <!-- Last Updated TextView -->
        <TextView
            android:id="@+id/lastUpdated"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/stock_name"
            android:textSize="14sp"
            android:text="@string/loading"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintEnd_toStartOf="@+id/UpdateButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Update Button -->
        <ImageButton
            android:id="@+id/UpdateButton"
            android:layout_width="49dp"
            android:layout_height="55dp"
            android:background="@drawable/ripple_effect"
            android:contentDescription="@string/update_stats_btn"
            android:src="@drawable/reload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
